# ICoder

./: .env.example  .gitignore  README.md  Resume.md  pyproject.toml  requirements.txt
plan/: MCP-PLAN.md  MEMORY-PLAN.md  REACT-PLAN.md  WEB-PLAN.md
src/icoder/: __init__.py  __main__.py
src/icoder/agent/: __init__.py  agent.py
src/icoder/cli/: __init__.py  commands.py  main.py  streaming.py
src/icoder/llm/: __init__.py  base.py  deepseek.py  factory.py  glm.py  openai_compatible.py
src/icoder/mcp/: __init__.py  bridge.py  config.py  runtime.py
src/icoder/memory/: __init__.py  extractor.py  long_term.py  manager.py  short_term.py
src/icoder/tools/: __init__.py  base.py  code_search_tool.py  command_tool.py  file_tools.py  registry.py  web_tools.py
src/icoder/web/: __init__.py  fetch.py  search.py
tests/integration/: test_cli_flow.py  test_react_flow.py
tests/unit/agent/: test_agent.py
tests/unit/cli/: test_commands.py  test_main.py  test_streaming.py
tests/unit/llm/: test_clients.py  test_factory.py  test_openai_compatible.py
tests/unit/mcp/: test_bridge.py  test_config.py
tests/unit/memory/: test_extractor.py  test_long_term.py  test_manager.py  test_short_term.py
tests/unit/tools/: test_code_search_tool.py  test_command_tool.py  test_file_tools.py  test_registry.py
