[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "icoder-agent"
version = "0.1.0"
description = "A minimal command-line ReAct coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "mcp>=1.28,<2",
    "openai>=1.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "trafilatura>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
icoder = "icoder.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
